--- a/QTMessenger/InterfaceWindow.ui
+++ b/QTMessenger/InterfaceWindow.ui
@@ -28,11 +28,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>PushButton</string>
-      </property>
-     </widget>
+     <widget class="QLineEdit" name="userName"/>
     </item>
     <item>
      <widget class="QListView" name="listView"/>
