UI Chat и Window : изменил название объектов

--- a/QTMessenger/InterfaceChat.ui
+++ b/QTMessenger/InterfaceChat.ui
@@ -18,17 +18,17 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QListView" name="listView"/>
+       <widget class="QListView" name="listView_chat"/>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="lineEdit_chat"/>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="pushButton_sendMessage">
           <property name="text">
-           <string>PushButton</string>
+           <string>Отправить</string>
           </property>
          </widget>
         </item>
