--- a/QTMessenger/InterfaceChat.ui
+++ b/QTMessenger/InterfaceChat.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>430</width>
-    <height>600</height>
+    <height>592</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,6 +17,9 @@
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLineEdit" name="lineEdit_nameChatOrContact"/>
+      </item>
       <item>
        <widget class="QListView" name="listView_chat"/>
       </item>
@@ -44,7 +47,7 @@
      <x>0</x>
      <y>0</y>
      <width>430</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
