--- a/QTMessenger/InterfaceWindow.ui
+++ b/QTMessenger/InterfaceWindow.ui
@@ -30,7 +30,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="page">
        <widget class="QLineEdit" name="lineEdit_userName">
@@ -112,7 +112,7 @@
        </widget>
       </widget>
       <widget class="QWidget" name="page_3">
-       <widget class="QLineEdit" name="lineEdit">
+       <widget class="QLineEdit" name="lineEdit_groupChatName">
         <property name="geometry">
          <rect>
           <x>250</x>
@@ -146,6 +146,19 @@
         </property>
         <property name="text">
          <string>ок</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pushButton_returnToPageCreateGroupOrContact">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>0</y>
+          <width>80</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>&lt;-</string>
         </property>
        </widget>
       </widget>
