--- a/QTMessenger/InterfaceWindow.ui
+++ b/QTMessenger/InterfaceWindow.ui
@@ -29,8 +29,11 @@
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="page">
        <widget class="QLineEdit" name="lineEdit_userName">
@@ -56,7 +59,7 @@
          <string>Создать</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="pushButton_writeMessage">
         <property name="geometry">
          <rect>
           <x>0</x>
@@ -84,7 +87,7 @@
          <string>Создать группу</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton_createContact">
+       <widget class="QPushButton" name="pushButton_newContact">
         <property name="geometry">
          <rect>
           <x>29</x>
@@ -94,7 +97,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>Создать контакт</string>
+         <string>Новый контакт</string>
         </property>
        </widget>
        <widget class="QPushButton" name="pushButton_backToMainWindow">
@@ -162,6 +165,121 @@
         </property>
        </widget>
       </widget>
+      <widget class="QWidget" name="page_4">
+       <widget class="QLineEdit" name="lineEdit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>32</x>
+          <y>29</y>
+          <width>351</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Новый контакт</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_FIO">
+        <property name="geometry">
+         <rect>
+          <x>80</x>
+          <y>70</y>
+          <width>151</width>
+          <height>24</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_2">
+        <property name="geometry">
+         <rect>
+          <x>40</x>
+          <y>70</y>
+          <width>51</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>ФИО:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_3">
+        <property name="geometry">
+         <rect>
+          <x>40</x>
+          <y>130</y>
+          <width>101</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Номер телефона:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_telephoneNumber">
+        <property name="geometry">
+         <rect>
+          <x>140</x>
+          <y>130</y>
+          <width>113</width>
+          <height>24</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_4">
+        <property name="geometry">
+         <rect>
+          <x>40</x>
+          <y>100</y>
+          <width>49</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>НИК:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_Nick">
+        <property name="geometry">
+         <rect>
+          <x>80</x>
+          <y>100</y>
+          <width>113</width>
+          <height>24</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pushButton_CreateContact">
+        <property name="geometry">
+         <rect>
+          <x>60</x>
+          <y>170</y>
+          <width>251</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Создать контакт</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="page_5">
+       <widget class="QPushButton" name="pushButton_backToMainWindow_2">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>80</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>&lt;-</string>
+        </property>
+       </widget>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -172,7 +290,7 @@
      <x>0</x>
      <y>0</y>
      <width>430</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
